[gd_scene load_steps=11 format=3 uid="uid://cp31w60s8pdsu"]

[ext_resource type="Script" uid="uid://oavf8pss3sb1" path="res://scenes/giocatore/giocatore.gd" id="1_x5jxo"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g7mfh"]
height = 0.4
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g7mfh"]
radius = 0.4
height = 1.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hc7ve"]
albedo_color = Color(0.5677461, 0.577193, 0.94190437, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vvfch"]
material = SubResource("StandardMaterial3D_hc7ve")
radius = 0.4
height = 1.6

[sub_resource type="CylinderShape3D" id="CylinderShape3D_x5jxo"]
height = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8b5lh"]
radius = 0.4
height = 1.1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8b5lh"]
material = SubResource("StandardMaterial3D_hc7ve")
radius = 0.4
height = 1.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fvtlo"]
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x5jxo"]
no_depth_test = true
albedo_color = Color(1, 0.7490196, 1, 1)

[node name="giocatore" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_x5jxo")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
shape = SubResource("CylinderShape3D_g7mfh")
target_position = Vector3(0, 0, 0)
margin = 0.1

[node name="CollisionShape3D_standing" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_g7mfh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D_standing"]
layers = 2
mesh = SubResource("CapsuleMesh_vvfch")

[node name="CollisionShape3D_standing2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CylinderShape3D_x5jxo")

[node name="CollisionShape3D_crouching" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_8b5lh")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D_crouching"]
layers = 2
mesh = SubResource("CapsuleMesh_8b5lh")

[node name="CollisionShape3D_crouching2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_fvtlo")
disabled = true

[node name="testa" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)

[node name="Camera3D" type="Camera3D" parent="testa"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.20000005)
cull_mask = 1048573

[node name="RayCast3D" type="RayCast3D" parent="testa/Camera3D"]
target_position = Vector3(0, 0, -1)

[node name="CSGBox3D" type="CSGBox3D" parent="testa"]
transform = Transform3D(0.98730594, 0.15883014, 0, -0.15690061, 0.97531176, -0.15540007, -0.024682214, 0.1534274, 0.9878516, 0.29530814, -0.32300544, -0.5)
material_override = SubResource("StandardMaterial3D_x5jxo")
size = Vector3(0.2, 0.2, 0.4)
